main_back수정사항 index에 적용

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="inner">
                     <div class="top">
                         <h2>COMING SOON</h2>
-                        <button type="button"><span>MORE</span></button>
+                        <a class="more-btn" href=""><span>MORE</span></a>
                     </div>
                     <div class="CScontents1">
                         <img src="./back/img/CS_img.png" alt="Taepung Corporation">
@@ -247,7 +247,7 @@
                 <div class="inner">
                     <div class="top">
                         <h2>ON-AIR</h2>
-                        <button type="button"><span>MORE</span></button>
+                        <a class="more-btn" href=""><span>MORE</span></a>
                     </div><!-- //.top -->
                 </div>
                 <div class="on_slide_wrap swiper">
@@ -263,8 +263,8 @@
                                     </li>
                                     <li class="bar"></li>
                                 </ul>
-                                <button type="button">READ MORE <img src="./back/img/arrow-up-right.png"
-                                        alt="arrow"></button>
+                                <a class="read-btn" href="">READ MORE <img src="./back/img/arrow-up-right.png"
+                                        alt="arrow"></a>
                             </div><!-- //.on_txtbox -->
                         </div><!-- //.on_centents01 -->
                         <div class="ONcontents02 swiper-slide">
@@ -278,8 +278,8 @@
                                     </li>
                                     <li class="bar"></li>
                                 </ul>
-                                <button type="button">READ MORE <img src="back/img/arrow-up-right.png"
-                                        alt="arrow"></button>
+                                <a class="read-btn" href="">READ MORE <img src="back/img/arrow-up-right.png"
+                                        alt="arrow"></a>
                             </div><!-- //.on_txtbox -->
                         </div>
                         <div class="ONcontents03 swiper-slide">
@@ -293,8 +293,8 @@
                                     </li>
                                     <li class="bar"></li>
                                 </ul>
-                                <button type="button">READ MORE <img src="./back/img/arrow-up-right.png"
-                                        alt="arrow"></button>
+                                <a class="read-btn" href="">READ MORE <img src="./back/img/arrow-up-right.png"
+                                        alt="arrow"></a>
                             </div><!-- //.on_txtbox -->
                         </div>
                         <div class="ONcontents01 swiper-slide">
@@ -308,8 +308,8 @@
                                     </li>
                                     <li class="bar"></li>
                                 </ul>
-                                <button type="button">READ MORE <img src="./back/img/arrow-up-right.png"
-                                        alt="arrow"></button>
+                                <a class="read-btn" href="">READ MORE <img src="./back/img/arrow-up-right.png"
+                                        alt="arrow"></a>
                             </div><!-- //.on_txtbox -->
                         </div><!-- //.on_centents01 -->
                         <div class="ONcontents02 swiper-slide">
@@ -323,8 +323,8 @@
                                     </li>
                                     <li class="bar"></li>
                                 </ul>
-                                <button type="button">READ MORE <img src="back/img/arrow-up-right.png"
-                                        alt="arrow"></button>
+                                <a class="read-btn" href="">READ MORE <img src="back/img/arrow-up-right.png"
+                                        alt="arrow"></a>
                             </div><!-- //.on_txtbox -->
                         </div>
                         <div class="ONcontents03 swiper-slide">
@@ -338,8 +338,8 @@
                                     </li>
                                     <li class="bar"></li>
                                 </ul>
-                                <button type="button">READ MORE <img src="./back/img/arrow-up-right.png"
-                                        alt="arrow"></button>
+                                <a class="read-btn" href="">READ MORE <img src="./back/img/arrow-up-right.png"
+                                        alt="arrow"></a>
                             </div><!-- //.on_txtbox -->
                         </div>
                     </div>
@@ -361,7 +361,7 @@
                 <div class="inner">
                     <div class="top">
                         <h2>BEYOND DRAMA</h2>
-                        <button type="button"><span>MORE</span></button>
+                        <a class="more-btn" href=""><span>MORE</span></a>
                     </div>
                     <div class="BDcontents">
                         <div class="BDconTop">
@@ -483,7 +483,7 @@
                                     <p class="event-date">2025.01.15</p>
                                     <p class="event-location">Seoul, Gangnam</p>
                                     <p class="event-desc">Join us for an exclusive group viewing experience</p>
-                                    <button type="button" class="event-btn">Apply Now</button>
+                                    <a href="#" class="event-btn">Apply Now</a>
                                 </div>
                             </div>
                         </div>
@@ -495,7 +495,7 @@
                                     <p class="event-date">Ongoing</p>
                                     <p class="event-location">Online & Offline</p>
                                     <p class="event-desc">Become a member of Studio Dragon Crew</p>
-                                    <button type="button" class="event-btn">Join Now</button>
+                                    <a href="#" class="event-btn">Join Now</a>
                                 </div>
                             </div>
                         </div>
@@ -507,7 +507,7 @@
                                     <p class="event-date">2025.02.01</p>
                                     <p class="event-location">CGV Yongsan</p>
                                     <p class="event-desc">Get early access to upcoming drama premieres</p>
-                                    <button type="button" class="event-btn">Register</button>
+                                    <a href="#" class="event-btn">Register</a>
                                 </div>
                             </div>
                         </div>
