추가 수정_섹션 순서, 글꼴 등

--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -171,148 +171,10 @@
 
     <!-- 메인 -->
     <main>
-      <!-- 히어로 섹션 -->
-      <section class="hero text_reveal_section">
-        <div class="sect_inner">
-          <ul class="hero-txtbox opacity_reveal">
-            <li>Create,</li>
-            <li>Share,</li>
-            <li>Vote,</li>
-            <li>Play with K-drama</li>
-          </ul>
-          <div class="imgbox repeat_area">
-            <div class="smiling-emoji"></div>
-          </div>
-        </div><!-- .sect_inner -->
-      </section><!-- .hero -->
-
-
-      <!-- 공모전 수상작 -->
-      <section class="contest-winner">
-        <div class="sect_inner">
-          <div class="top">
-            <div class="decoImg"></div>
-            <div class="title">
-              <h2>1st Video Contest Winners</h2>
-              <p>
-                Fans reimagined the iconic scenes of “The Glory”.
-                <br />
-                We celebrate the creativity and passion of our contest winners.
-              </p>
-            </div>
-          </div><!-- top -->
-          <div class="winner-wrap">
-            <div class="video-content">
-              <div class="video-wrap">
-                <video src="./moon/asset/award_1.mp4" autoplay muted loop playsinline controlslist="nodownload"
-                  oncontextmenu="return false;"></video>
-                <div class="award-info">
-                  <h3 class="award">Gold Award</h3>
-                  <div class="txtbox">
-                    <ul class="subtitle">
-                      <li>
-                        <b>Title : The Fire Inside</b>
-                      </li>
-                      <li>
-                        <b>Nickname : rainyroom</b>
-                      </li>
-                      <li>
-                        <p>Acceptance comment:
-                          <br />
-                          “I wanted to express how a single word, or even a typo, can hold deep
-                          emotions—regret, forgiveness, and pain. The drama The Glory inspired
-                          me to explore the power of unspoken apologies. Winning the Gold Award
-                          feels surreal, and I’m grateful to everyone who connected with my
-                          work. This moment reminds me that even small mistakes can lead to
-                          meaningful stories.”
-                        </p>
-                      </li>
-                    </ul>
-                  </div><!-- .txtbox -->
-                  <div id="goldimg"></div>
-                </div><!-- .award-info -->
-                <div class="circles">
-                  <div class="blur-1"></div>
-                  <div class="blur-2"></div>
-                </div>
-              </div><!-- .video-wrap -->
-            </div><!-- .video-content -->
-            <div class="video-content">
-              <div class="video-wrap">
-                <video src="./moon/asset/award_2.mp4" autoplay muted loop playsinline controlslist="nodownload"
-                  oncontextmenu="return false;"></video>
-                <div class="award-info">
-                  <h3 class="award">Silver Award</h3>
-                  <div class="txtbox">
-                    <ul class="subtitle">
-                      <li>
-                        <b>Title : Typo of Sorry</b>
-                      </li>
-                      <li>
-                        <b>Nickname : bloom</b>
-                      </li>
-                      <li>
-                        <p>Acceptance comment:
-                          <br />
-                          “I truly enjoyed watching The Glory, and many of its scenes stayed
-                          with me long after. I created this video inspired by the unspoken
-                          emotions behind every message sent—or left unsent. It’s an incredible
-                          honor to receive this award, and I’m thankful for the chance to share
-                          my interpretation. This experience motivates me to keep creating
-                          stories that connect with others.”
-                        </p>
-                      </li>
-                    </ul>
-                  </div><!-- .txtbox -->
-                  <div id="silverimg"></div>
-                </div><!-- .award-info -->
-                <div class="circles">
-                  <div class="blur-1"></div>
-                  <div class="blur-2"></div>
-                </div>
-              </div><!-- .video-wrap -->
-            </div><!-- video-content -->
-            <div class="video-content">
-              <div class="video-wrap">
-                <video src="./moon/asset/award_3.mp4" autoplay muted loop playsinline controlslist="nodownload"
-                  oncontextmenu="return false;"></video>
-                <div class="award-info">
-                  <h3 class="award">Popular Choice</h3>
-                  <div class="txtbox">
-                    <ul class="subtitle">
-                      <li>
-                        <b>Title : Read Receipt, Unsent</b>
-                      </li>
-                      <li>
-                        <b>Nickname : mintlatte</b>
-                      </li>
-                      <li>
-                        <p>Acceptance comment:
-                          <br />
-                          “My goal was to win the Gold Award, but receiving the Popular Choice
-                          still feels deeply rewarding. This project took a lot of effort and
-                          late nights, so being recognized by viewers means a lot to me. It’s
-                          heartwarming to know that people connected with my work. I’ll remember
-                          this encouragement and keep challenging myself to do even better.”
-                        </p>
-                      </li>
-                    </ul>
-                  </div><!-- .txtbox -->
-                  <div id="popularimg"></div>
-                </div><!-- .award-info -->
-                <div class="circles">
-                  <div class="blur-1"></div>
-                  <div class="blur-2"></div>
-                </div>
-              </div><!-- video-wrap -->
-            </div><!-- video-content -->
-          </div><!-- .wrap -->
-        </div><!-- .sect_inner -->
-      </section><!-- .contest-winner -->
 
       <!-- 진행중인 공모전 -->
       <section class="running-contest">
-        <div class="sect_inner">
+        <div class=".sect_inner">
           <div class="title">
             <h2>Running Contest</h2>
           </div>
@@ -362,6 +224,147 @@
           </div><!-- .con -->
         </div>
       </section>
+      
+      <!-- 공모전 수상작 -->
+      <section class="contest-winner">
+        <div class="sect_inner">
+          <div class="top">
+            <div class="decoImg"></div>
+            <div class="title">
+              <h2>1st Video Contest Winners</h2>
+              <p>
+                Fans reimagined the iconic scenes of “The Glory”.
+                <br />
+                We celebrate the creativity and passion of our contest winners.
+              </p>
+            </div>
+          </div><!-- top -->
+          <div class="winner-wrap">
+            <div class="video-content">
+              <div class="video-wrap">
+                <video src="./moon/asset/award_1.mp4" autoplay muted loop playsinline controlslist="nodownload"
+                  oncontextmenu="return false;"></video>
+                <div class="award-info">
+                  <h3 class="award">Gold Award</h3>
+                  <div class="txtbox">
+                    <ul class="subtitle">
+                      <li>
+                        <b>Title : The Fire Inside</b>
+                      </li>
+                      <li>
+                        <b>Nickname : rainyroom</b>
+                      </li>
+                      <li>
+                        <p>Acceptance comment:
+                          <br>
+                          “I wanted to express how a single word, or even a typo, can hold deep
+                          emotions—regret, forgiveness, and pain. The drama The Glory inspired
+                          me to explore the power of unspoken apologies.
+                          <br>Winning the Gold Award
+                          feels surreal, and I’m grateful to everyone who connected with my
+                          work. This moment reminds me that even small mistakes can lead to
+                          meaningful stories.”
+                        </p>
+                      </li>
+                    </ul>
+                  </div><!-- .txtbox -->
+                  <div id="goldimg"></div>
+                </div><!-- .award-info -->
+                <div class="circles">
+                  <div class="blur-1"></div>
+                  <div class="blur-2"></div>
+                </div>
+              </div><!-- .video-wrap -->
+            </div><!-- .video-content -->
+            <div class="video-content">
+              <div class="video-wrap">
+                <video src="./moon/asset/award_2.mp4" autoplay muted loop playsinline controlslist="nodownload"
+                  oncontextmenu="return false;"></video>
+                <div class="award-info">
+                  <h3 class="award">Silver Award</h3>
+                  <div class="txtbox">
+                    <ul class="subtitle">
+                      <li>
+                        <b>Title : Typo of Sorry</b>
+                      </li>
+                      <li>
+                        <b>Nickname : bloom</b>
+                      </li>
+                      <li>
+                        <p>Acceptance comment:
+                          <br />
+                          “I truly enjoyed watching The Glory, and many of its scenes stayed
+                          with me long after. I created this video inspired by the unspoken
+                          emotions behind every message sent—or left unsent. <br>
+                          It’s an incredible honor to receive this award, and I’m thankful for the chance to share
+                          my interpretation. This experience motivates me to keep creating
+                          stories that connect with others.”
+                        </p>
+                      </li>
+                    </ul>
+                  </div><!-- .txtbox -->
+                  <div id="silverimg"></div>
+                </div><!-- .award-info -->
+                <div class="circles">
+                  <div class="blur-1"></div>
+                  <div class="blur-2"></div>
+                </div>
+              </div><!-- .video-wrap -->
+            </div><!-- video-content -->
+            <div class="video-content">
+              <div class="video-wrap">
+                <video src="./moon/asset/award_3.mp4" autoplay muted loop playsinline controlslist="nodownload"
+                  oncontextmenu="return false;"></video>
+                <div class="award-info">
+                  <h3 class="award">Popular Choice</h3>
+                  <div class="txtbox">
+                    <ul class="subtitle">
+                      <li>
+                        <b>Title : Read Receipt, Unsent</b>
+                      </li>
+                      <li>
+                        <b>Nickname : mintlatte</b>
+                      </li>
+                      <li>
+                        <p>Acceptance comment:
+                          <br />
+                          “My goal was to win the Gold Award, but receiving the Popular Choice
+                          still feels deeply rewarding. This project took a lot of effort and
+                          late nights, so being recognized by viewers means a lot to me.
+                          It’s heartwarming to know that people connected with my work.
+                          <br>I’ll remember
+                          this encouragement and keep challenging myself to do even better.”
+                        </p>
+                      </li>
+                    </ul>
+                  </div><!-- .txtbox -->
+                  <div id="popularimg"></div>
+                </div><!-- .award-info -->
+                <div class="circles">
+                  <div class="blur-1"></div>
+                  <div class="blur-2"></div>
+                </div>
+              </div><!-- video-wrap -->
+            </div><!-- video-content -->
+          </div><!-- .wrap -->
+        </div><!-- .sect_inner -->
+      </section><!-- .contest-winner -->
+
+      
+      <!-- 히어로 섹션 -->
+      <section class="hero">
+        <div class="sect_inner">
+          <ul class="hero-txtbox opacity_reveal">
+            <li class="o_txt">Create,</li>
+            <li class="o_txt">Share,</li>
+            <li class="o_txt">Vote,</li>
+            <li class="o_txt">Play with K-drama</li>
+          </ul>
+          <div class="imgbox repeat_area">
+            <div class="smiling-emoji"></div>
+          </div>
+        </div><!-- .sect_inner -->
+      </section><!-- .hero -->
 
       <!-- 팬갤러리 -->
       <section class="creativeGallery">
@@ -372,7 +375,7 @@
             </div>
           </div>
           <!-- 1. 팬아트 카테고리 -->
-          <div class="fanarts active">
+          <div class="fanarts">
             <div class="wrap inner">
               <div class="con img_popular">
                 <h4>🔥 ‍Popular</h4>
@@ -628,8 +631,8 @@
                   <li class="swiper-slide">
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-t-img_5.jpg" alt="a scene of a drama">
+                      <b class="num">1</b>
                       <div class="info-overlay">
-                        <b class="num">1</b>
                         <div class="comm_article_info">
                           <em>Episode Discussions</em>
                           <span>
@@ -643,8 +646,8 @@
                   <li class="swiper-slide">
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-t-img_2.png" alt="Food scenes in dramas">
+                      <b class="num">2</b>
                       <div class="info-overlay">
-                        <b class="num">2</b>
                         <div class="comm_article_info">
                           <em>Freetalking</em>
                           <span>
@@ -658,8 +661,8 @@
                   <li class="swiper-slide">
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-t-img_3.webp" alt="Suzy's photos in the drama 'Doona!'">
+                      <b class="num">3</b>
                       <div class="info-overlay">
-                        <b class="num">3</b>
                         <div class="comm_article_info">
                           <em>Culture &amp; Locations</em>
                           <span>
@@ -673,8 +676,8 @@
                   <li class="swiper-slide">
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-t-img_4.png" alt="The appearance of the developed city of Seoul">
+                      <b class="num">4</b>
                       <div class="info-overlay">
-                        <b class="num">4</b>
                         <div class="comm_article_info">
                           <em>Q&amp;A · Knowledge Share</em>
                           <span>
@@ -689,8 +692,8 @@
                   <li class="swiper-slide">
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-t-img_1.jpg" alt="a scene of the drama Bon Appétit, Your Majesty">
+                      <b class="num">5</b>
                       <div class="info-overlay">
-                        <b class="num">5</b>
                         <div class="comm_article_info">
                           <em>Episode Discussions</em>
                           <span>
@@ -805,8 +808,8 @@
                   <li class="swiper-slide">
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-w-img_2.jpg" alt="">
+                      <b class="num">3</b>
                       <div class="info-overlay">
-                        <b class="num">3</b>
                         <div class="comm_article_info">
                           <em>Episode Discussions</em>
                           <span>
@@ -1025,7 +1028,7 @@
                 class="fa-solid fa-arrow-rotate-right"></i></button>
           </div>
         </div>
-      </section><!--  -->
+      </section><!-- .vote -->
     </main>
 
 
