--- a/work_ryu.html
+++ b/work_ryu.html
@@ -503,14 +503,7 @@
                                         </div><!-- /.title_section -->
                 
                                         <div class="description">
-                                            <p>She dreamed of becoming an architect, but after suffering brutal school violence due to
-                                                poverty in high school, she dropped out and devoted herself to becoming a teacher.<br>
-                                                This caused her to lose her smile, her soul shattered into dust, and she only listened
-                                                to the weather channel.<br>
-                                                Due to the deep trauma of her past, she lived in despair, unable to see even an inch
-                                                ahead.<br>
-                                                Fueled by anger and hatred, she endures the stark, bleak nights, dedicating her life to
-                                                plotting revenge against both the perpetrators and the bystanders.</p>
+                                            <p>From her wealthy background to her striking<br>beauty and bright, yet vicious personality,<br>Yeonjin, a former instigator of school violence,<br>has lived her entire life in the white night, with<br>everything at her feet since birth. But Yeonjin<br>didn't know that Dong-eun, who had endured the<br>harsh night, was walking toward her.</p>
                                         </div><!-- /.description -->
                                     </div><!-- /.text_wrapper -->
                                 </div><!-- /.card_content -->
