네비게이션 수정

--- a/main_beck.html
+++ b/main_beck.html
@@ -112,12 +112,12 @@
         <nav class="ham_nav">
             <div class="menu_header">
                 <div class="language_switcher">
-                    <a href="#" class="lang_link active">EN</a>
-                    <a href="#" class="lang_link">KO</a>
+                    <a href="" class="lang_link active">EN</a>
+                    <a href="" class="lang_link en_link">KO</a>
                 </div>
 
                 <div class="menu_icons">
-                    <a href="#" class="icon_link">
+                    <a href="" class="icon_link">
                         <img src="back/img/user.png" alt="Profile">
                     </a>
                     <button type="button" class="icon_link close_btn">
