진행중인 공모전 섹션 스타일 및 스크립트 수정, 커뮤니티 및 갤러리 레이아웃 개선

--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -369,10 +369,9 @@
       <!-- 팬갤러리 -->
       <section class="creativeGallery">
         <div class="inner">
-          <div class="titlebox">
-            <div class="title">
-              <h2>Creative Gallery</h2>
-            </div>
+          <div class="top">
+            <h2>Creative Gallery</h2>
+            <a class="more-btn" href=""><span>MORE</span></a>
           </div>
           <!-- 1. 팬아트 카테고리 -->
           <div class="fanarts">
@@ -612,8 +611,11 @@
       <!-- 커뮤니티 섹션 -->
       <section class="community">
         <div class="sect_inner">
+          <div class="top">
+            <h2>community</h2>
+            <a class="more-btn" href=""><span>MORE</span></a>
+          </div>
           <div class="title">
-            <h2><a href="#community">community</a></h2>
             <div class="subtit">
               <h4>popular</h4>
               <div class="com_btn_wrap">
